[gd_scene load_steps=9 format=3 uid="uid://cjucnla4wsu42"]

[ext_resource type="Script" path="res://ui/pause_screen.gd" id="1_wl04b"]
[ext_resource type="Shader" path="res://ui/pause_screen.gdshader" id="2_ptysv"]
[ext_resource type="Texture2D" uid="uid://0s2mrmr465nk" path="res://ui/enemyTanksA.png" id="3_vc46e"]
[ext_resource type="Texture2D" uid="uid://6gqfsoigp7eq" path="res://ui/enemyTanksB.png" id="4_3d38d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ifjx"]
shader = ExtResource("2_ptysv")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_i4hh6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t6fuh"]
resource_name = "blur"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wft6"]
_data = {
"RESET": SubResource("Animation_i4hh6"),
"blur": SubResource("Animation_t6fuh")
}

[node name="pause_screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wl04b")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6ifjx")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -167.0
offset_right = 132.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Resume"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Restart"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit"

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="tanks" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Tanks"

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="EnemyTanksA" type="Sprite2D" parent="PanelContainer/VBoxContainer"]
visible = false
position = Vector2(-249.5, 175.5)
scale = Vector2(1.31295, 1.49517)
texture = ExtResource("3_vc46e")

[node name="RichTextLabelPT" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksA"]
offset_left = -48.0
offset_top = -22.0
offset_right = -8.0
offset_bottom = 24.0
tooltip_text = "Popped tire: Unable to move"

[node name="RichTextLabelB" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksA"]
offset_left = -48.0
offset_top = 136.0
offset_right = -4.99999
offset_bottom = 183.0
tooltip_text = "Bomber: May drop up to 2 bombs at a time. "

[node name="EnemyTanksB" type="Sprite2D" parent="PanelContainer/VBoxContainer"]
visible = false
position = Vector2(581, 175)
scale = Vector2(1.40123, 1.50725)
texture = ExtResource("4_3d38d")

[node name="RichTextLabelB2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = -67.0837
offset_top = 56.3942
offset_right = -24.0837
offset_bottom = 103.394
tooltip_text = "Bomber: May drop 1 bomb at a time. "

[node name="RichTextLabelFB" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = -67.0
offset_top = -172.0
offset_right = -31.0
offset_bottom = -147.0
tooltip_text = "Fast Bullets: These bullets travel quicker than normal"

[node name="RichTextLabelFB2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = -67.7973
offset_top = 149.942
offset_right = -31.7973
offset_bottom = 174.942
tooltip_text = "Fast Bullets: These bullets travel quicker than normal"

[node name="RichTextLabelSFB" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = -66.0
offset_top = -93.0
offset_right = -10.0
offset_bottom = -68.0
tooltip_text = "Super Fast Bullets: These bullets travel at rapid speeds. "

[node name="RichTextLabelPT2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = -7.13655
offset_top = -101.51
offset_right = 32.8635
offset_bottom = -55.5096
tooltip_text = "Popped tire: Unable to move"

[node name="RichTextLabelMB" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = -24.0
offset_top = -21.0
offset_right = 5.0
offset_bottom = 23.0
tooltip_text = "Multiple Bullets: May have 3 bullets travelling at a time. "

[node name="RichTextLabelFR" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = 8.0
offset_top = -21.0
offset_right = 49.0
offset_bottom = 26.0
tooltip_text = "Fast Relode: Can shoot 2 bullets/s"

[node name="RichTextLabelFR2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = 9.0
offset_top = 56.0
offset_right = 45.0
offset_bottom = 103.0
tooltip_text = "Fast Relode: Can shoot 2 bullets/s"

[node name="RichTextLabelMB2" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = -21.0
offset_top = 49.0
offset_right = 8.0
offset_bottom = 113.0
tooltip_text = "Multiple Bullets: May have 5 bullets travelling at a time. "

[node name="RichTextLabelQ" type="RichTextLabel" parent="PanelContainer/VBoxContainer/EnemyTanksB"]
offset_left = 48.0
offset_top = 55.0
offset_right = 86.0
offset_bottom = 100.0
tooltip_text = "Quick: Navigates faster than normal. "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5wft6")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/tanks" to="." method="_on_tanks_pressed"]
